<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.comp90018.Activity.Home.CommentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:id="@+id/commentText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:textSize="16sp"
        android:textColor="#ff33b5e5"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/commentContents"
        android:layout_below="@+id/commentText"
        android:layout_alignStart="@+id/commentText"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="7dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_comment"
        android:id="@+id/commentTextView"
        android:layout_below="@id/commentContents"
        android:textSize="24sp"
        android:layout_marginStart="10dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/input_your_text_here"
        android:id="@+id/commentEditText"
        android:layout_below="@+id/commentTextView"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:gravity="top"
        android:padding="5dp"
        android:background="@drawable/border"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/comment"
        android:id="@+id/button_comment"
        android:layout_below="@+id/commentEditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:background="#ff33b5e5"
        android:textColor="#ffffff"
        android:layout_marginStart="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/cancel"
        android:id="@+id/comment_button_cancel"
        android:layout_alignTop="@+id/button_comment"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="70dp"
        android:background="#ff33b5e5"
        android:textColor="#ffffff"/>
</RelativeLayout>