<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Shake.UserViewActivity">

    <Button
        android:id="@+id/follow_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="0dp"
        android:background="#009688"
        android:text="@string/follow"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/profile_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerInParent="false"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/default_avatar" />

    <ListView
        android:id="@+id/browserListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#33b5e5"
        android:dividerHeight="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="180dp">


    </ListView>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/nickname"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/loading"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/user_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/bio"
        android:textSize="20sp" />



</RelativeLayout>